--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <div class="item">
         <h2>Versão</h2>
         <p>Versão do Programa.</p>
-        <a href="https://rigobertooliveira.github.io/att/version.txt" download>Baixar Software A</a>
+        <a href="https://rigobertooliveira.github.io/att/version.txt" download>Versão</a>
     </div>
 
     <div class="item">
         <h2>Atualização.</h2>
         <p>Arquivo para atualização.</p>
-        <a href="https://rigobertooliveira.github.io/att/att.zip" download>Baixar Software B</a>
+        <a href="https://rigobertooliveira.github.io/att/att.zip" download>Atualização.</a>
     </div>
 
 </div>
